# slothcode

./: .gitignore  .sample_env  codebase.txt  package-lock.json  package.json  pyproject.toml
agent/: graph.py  prompts.py  tools.py
backend/app/: main.py
backend/app/routers/: jobs.py
backend/app/services/: agent_runner.py  job_store.py  preview.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FileExplorer.tsx  JobProgress.tsx  PreviewPanel.tsx
frontend/src/pages/: HomePage.tsx  JobPage.tsx
frontend/src/store/: useProjectStore.ts
generated_project/: app.py
generated_project/static/css/: style.css
generated_project/static/js/: script.js
generated_project/templates/: index.html
